# shortyio

./: .tool-versions  Cargo.toml  Info.plist.template  LICENSE  README.md  build-macos-app.sh  build.rs  install-linux.sh  systems.weedmark.shortyio.desktop
.github/workflows/: ci.yml  release.yml
src/: main.rs
