[package]
name = "shortyio"
version = "0.2.1"
edition = "2024"

[dependencies]
eframe = "0.30"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread"] }
anyhow = "1.0"
directories = "5.0"
arboard = { version = "3.6", features = ["wayland-data-control"] }
