[package]
name = "shortyio"
version = "0.3.2"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = "0.30"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread"] }
anyhow = "1.0"
directories = "5.0"
arboard = { version = "3.6", features = ["wayland-data-control"] }
image = "0.25"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"